# jons-pyright-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TROUBLESHOOTING.md  debug_reader.py  diagnose_hover.py  pyproject.toml  pyright_client_threaded.py  pyright_mcp.py  pyright_mcp_asyncio_broken.py  pyright_mcp_fixed.py  pyright_mcp_old.py  requirements.md  test_basic_thread.py  test_debug_hanging.py  test_debug_simple.py  test_fixed_client.py  test_hover_debug.py  test_hover_hex_sl.py  test_hover_minimal.py  test_hover_thread.py  test_hover_working.py  test_incremental.py  test_lsp_direct.py  test_minimal_async.py  test_minimal_thread.py  test_pixi_env.py  test_pixi_imports.py  test_pyright_direct.py  test_pyright_simple.py  test_real_pixi.py  test_sample.py  test_selector_event_loop.py  test_threaded.py  test_threads.py  test_threads_only.py
pyright_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: __init__.py  jons_mcp_pyright.py
src/jons_mcp_pyright/: __init__.py  constants.py  diagnostic_filter.py  environment.py  exceptions.py  lsp_client.py  manager.py  schemas.py  server.py  utils.py
src/jons_mcp_pyright/tools/: __init__.py  extensions.py  intelligence.py  language.py
tests/: conftest.py  test_diagnostic_filter.py  test_environment.py  test_integration.py  test_lsp_client.py  test_manager.py  test_mcp_tools.py  test_public_intelligence.py  test_public_language.py  test_public_schemas.py  test_sync_readiness.py
